--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -29,4 +29,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: Deploy to GitHub Pages
-        run: mkdocs gh-deploy --clean
+        run: mkdocs gh-deploy --clean --verbose
