palette with (prefers-color-scheme)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,25 @@ theme:
     - navigation.instant
     - navigation.tracking
     - content.code.copy
+  palette:
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch dark/light mode automatically by user's OS
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: deep purple
+      accent: green
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: deep purple
+      accent: green
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 
 extra:
   consent:
