--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,13 @@ plugins:
       blog_dir: blog
       draft: true
       blog_toc: true
+  - rss:
+      match_path: blog/posts/.* 
+      date_from_meta:
+        as_creation: date
+      categories:
+        - categories
+        - tags
 
 theme:
   name: material
